# countvoncount

./: .gitignore  Cargo.toml  README.md  context.md  test_cases.yaml
analysis/: run.sh  score.py  visualize.py
src/: agent.rs  benchmark.rs  cli.rs  error.rs  lib.rs  main.rs  mod.rs  openai.rs  traits.rs  types.rs
src/tools/: calculator.rs  datetime.rs  mod.rs
tests/: integration_tests.rs  tool_tests.rs
