[package]
name = "countvoncount_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cvc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
clap = { version = "4.5.45", features = ["derive", "help"] }
evalexpr = "12.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.4"
