[package]
name = "countvoncount"
version = "0.1.0"
edition = "2024"
authors = ["William Hunt"]
description = "Count von Count - Adding Basic Tools to AI Agents"

[[bin]]
name = "cvc"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive", "help"] }
evalexpr = "12.0.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
dotenvy = "0.15"
serde_yaml = "0.9"

[dev-dependencies]
tokio-test = "0.4.4"
